--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "colbo",
   "version": "1.0.0",
+  "author": {
+    "name": "Aia Rupsom"
+  },
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
