--- a/package.json
+++ b/package.json
@@ -12,10 +12,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/netinfo": "9.3.5",
+    "@react-navigation/bottom-tabs": "^6.5.5",
+    "@react-navigation/stack": "^6.3.14",
     "expo": "~47.0.12",
+    "expo-constants": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "formik": "^2.2.9",
+    "lottie-react-native": "5.1.4",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-expo-image-cache": "^4.1.0",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-progress": "^5.0.0",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
