--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-progress": "^5.0.0",
-    "yup": "^1.0.0"
+    "yup": "^1.0.0",
+    "expo-app-loading": "~2.1.1",
+    "expo-location": "~15.0.1",
+    "expo-image-picker": "~14.0.2",
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
