--- a/package.json
+++ b/package.json
@@ -13,24 +13,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/stack": "^6.3.14",
+    "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "expo": "~47.0.12",
+    "expo-app-loading": "~2.1.1",
     "expo-constants": "~14.0.2",
+    "expo-image-picker": "~14.0.2",
+    "expo-location": "~15.0.1",
+    "expo-secure-store": "~12.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.1",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "lottie-react-native": "5.1.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-progress": "^5.0.0",
-    "yup": "^1.0.0",
-    "expo-app-loading": "~2.1.1",
-    "expo-location": "~15.0.1",
-    "expo-image-picker": "~14.0.2",
-    "expo-splash-screen": "~0.17.5"
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
