--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-progress": "^5.0.0",
-    "yup": "^1.0.0"
+    "yup": "^1.0.0",
+    "expo-checkbox": "~2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
