--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "expo": "~47.0.12",
     "expo-app-loading": "~2.1.1",
+    "expo-checkbox": "~2.2.2",
     "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
     "expo-location": "~15.0.1",
@@ -37,7 +38,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-progress": "^5.0.0",
     "yup": "^1.0.0",
-    "expo-checkbox": "~2.2.2"
+    "@react-native-community/datetimepicker": "6.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
